--- a/sharedassets/src/main/res/values/colors.xml
+++ b/sharedassets/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="onSecondaryColor">#FFFFFF</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transparent">#00FFFFFF</color>
 </resources>
