--- a/sharedassets/src/main/res/values/colors.xml
+++ b/sharedassets/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
+
+    <color name="purple_one">#A020F0</color>
+    <color name="purple_two">#D38CFF</color>
 </resources>
