--- a/component/breathpage/src/main/res/layout/fragment_breath_page.xml
+++ b/component/breathpage/src/main/res/layout/fragment_breath_page.xml
@@ -30,37 +30,38 @@
 
     <FrameLayout
         android:id="@+id/play_bg"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:background="@drawable/shape_circle"
-        android:backgroundTint="@color/white">
+        android:backgroundTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.45">
 
         <ImageView
-            android:layout_gravity="center"
             android:layout_width="90dp"
             android:layout_height="90dp"
+            android:layout_gravity="center"
+            android:contentDescription="play button"
             android:src="@drawable/ic_play"
-            app:tint="@color/black"
-            android:contentDescription="play button" />
+            app:tint="@color/black" />
 
         <TextView
             android:id="@+id/time_counter"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="22dp"
+            android:layout_gravity="center"
             android:layout_marginTop="22dp"
+            android:layout_marginBottom="22dp"
             android:fontFamily="@font/poppins_light"
             android:textAppearance="?attr/textAppearanceHeadline2"
             android:textColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/play_bg"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/play_bg"
             tools:text="4" />
 
     </FrameLayout>
@@ -69,12 +70,11 @@
         android:id="@+id/current_state_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="22dp"
-        android:layout_marginTop="22dp"
+        android:layout_marginBottom="64dp"
         android:fontFamily="@font/poppins_semi_bold"
         android:textAppearance="?attr/textAppearanceHeadline4"
         android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/play_bg"
+        app:layout_constraintBottom_toTopOf="@id/restart_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:text="Start" />
