Feature: Create color animation method

--- a/sharedassets/src/main/res/values/colors.xml
+++ b/sharedassets/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
 
     <color name="purple_one">#A020F0</color>
     <color name="purple_two">#D38CFF</color>
+    <color name="blue_one">#5433FF</color>
+    <color name="blue_two">#20BDFF</color>
 </resources>
