--- a/component/breathpage/src/main/res/layout/fragment_breath_page.xml
+++ b/component/breathpage/src/main/res/layout/fragment_breath_page.xml
@@ -42,6 +42,7 @@
         app:layout_constraintVertical_bias="0.45">
 
         <ImageView
+            android:id="@+id/play_button"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_gravity="center"
