Feature: Transparent status bar

--- a/sharedassets/src/main/res/values/themes.xml
+++ b/sharedassets/src/main/res/values/themes.xml
@@ -9,8 +9,9 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/secondaryColor</item>
         <item name="colorOnSecondary">@color/onSecondaryColor</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:windowTranslucentStatus">false</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">#00000000</item>
     </style>
 </resources>
