--- a/sharedassets/src/main/res/values-night/themes.xml
+++ b/sharedassets/src/main/res/values-night/themes.xml
@@ -12,7 +12,9 @@
         <item name="colorOnSecondary">@color/black</item>
 -->
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:windowTranslucentStatus">false</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">#00000000</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
