--- a/component/patternlistpage/src/main/res/layout/fragment_pattern_list.xml
+++ b/component/patternlistpage/src/main/res/layout/fragment_pattern_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PatternListFragment">
+    tools:context=".view.PatternListFragment">
 
     <TextView
         android:layout_width="match_parent"
