--- a/sharedassets/src/main/res/navigation/nav_graph.xml
+++ b/sharedassets/src/main/res/navigation/nav_graph.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/pattern_list_fragment">
+    app:startDestination="@id/notification_list_fragment">
 
     <fragment
         android:id="@+id/breath_page_fragment"
@@ -13,5 +13,10 @@
         android:id="@+id/pattern_list_fragment"
         android:name="com.daggery.patternlistpage.view.PatternListFragment"
         android:label="Pattern List Fragment" />
+
+    <fragment
+        android:id="@+id/notification_list_fragment"
+        android:name="com.daggery.present.notificationpage.view.NotificationPageFragment"
+        android:label="Notification List Fragment" />
 
 </navigation>
