--- a/component/routinepage/src/main/res/layout/fragment_routine_page.xml
+++ b/component/routinepage/src/main/res/layout/fragment_routine_page.xml
@@ -18,7 +18,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
         tools:itemCount="10"
         tools:listitem="@layout/tile_routine" />
 </LinearLayout>
